18Jul25|Games page|Designed games page

--- a/games/games.html
+++ b/games/games.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Games | Ultimatix</title>
   <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/games.css" />
   <script src="/js/script.js" defer></script>
 </head>
 
@@ -26,21 +27,28 @@
   </header>
 
   <main>
-    <div class="search-bar">
-      <p>Find Your Next Game</p>
-      <!-- <p>Search for games, news, blogs, or tools.</p> -->
-      <input type="text" placeholder="Search..." class="search-bar" />
-    </div>
-    <section class="hero">
+    <section class="games-main-category">
       <h3>Play to Relax</h2>
-      <p>Step into a curated world of chill games—designed to soothe, entertain, and refresh. From calming puzzles and ambient adventures to low-stress play modes, this zone is your escape from the grind. No timers, no pressure, just pure relaxing fun.</p>
+        <p>Step into a curated world of chill games—designed to soothe, entertain, and refresh. From calming puzzles and
+          ambient adventures to low-stress play modes, this zone is your escape from the grind. No timers, no pressure,
+          just pure relaxing fun.</p>
+    </section>
+    <section class="search-section">
+      <div class="search-section">
+        <p class="search-bar-text">Find Your Next Game</p>
+      </div>
+      <div class="search-section">
+        <!-- <p>Search for games, news, blogs, or tools.</p> -->
+        <input  class="search-bar" type="text" placeholder="Search..." class="search-bar" />
+      </div>
     </section>
     <section class="games-section">
       <div class="games-section-menu">
         <div id="sudoku" class="games-div">
           <img class="games-section-img" src="\assets\img\sudoku.jpeg" alt="">
           <a href="/games/sudoku.html" class="games-section-heading">Sudoku</a>
-          <p class="games-section-desc">One grid, nine lives! Sudoku: where logic meets serenity.<br>Sharpen your mind!</p>
+          <p class="games-section-desc">One grid, nine lives! Sudoku: where logic meets serenity.<br>Sharpen your mind!
+          </p>
         </div>
         <div id="whereswaldo">
           <img class="games-section-img" src="\assets\img\waldo.jpeg" alt="">
@@ -50,10 +58,11 @@
         <div id="tictactoe">
           <img class="games-section-img" src="" alt="">
           <a href="/games/xo.html" class="games-section-heading">Tic-Tac-Toe</a>
-          <p class="games-section-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of wits.<br>Challenge yourself or a friend.</p>
+          <p class="games-section-desc">Three in a row, one mind to outsmart! Tic Tac Toe’s a battle of
+            wits.<br>Challenge yourself or a friend.</p>
         </div>
-        
-        
+      </div>
+      <div class="games-section-menu">
         <div id="minesweeper">
           <img class="games-section-img" src="" alt="">
           <a href="/games/minesweeper.html" class="games-section-heading">Minesweeper</a>
@@ -69,6 +78,8 @@
           <a href="/games/number-guessing.html" class="games-section-heading">Number Guessing</a>
           <p class="games-section-desc">Number Guessing.</p>
         </div>
+      </div>
+      <div class="games-section-menu">
         <div id="2048">
           <img class="games-section-img" src="" alt="">
           <a href="/games/2048.html" class="games-section-heading">2048</a>
@@ -82,12 +93,16 @@
         <div id="rock-paper-scissors">
           <img class="games-section-img" src="" alt="">
           <a href="/games/rock-paper-scissors.html" class="games-section-heading">Rock Paper Scissors</a>
-          <p class="games-section-desc">Test your luck and strategy! Choose rock, paper, or scissors and see if you can outsmart your opponent.</p>
+          <p class="games-section-desc">Test your luck and strategy! Choose rock, paper, or scissors and see if you can
+            outsmart your opponent.</p>
         </div>
+      </div>
+      <div class="games-section-menu">
         <div id="typing-speed-test">
           <img class="games-section-img" src="" alt="">
           <a href="/games/typing-speed-test.html" class="games-section-heading">Typing Speed Test</a>
-          <p class="games-section-desc">How fast can you type? Challenge yourself and improve your typing speed and accuracy.</p>
+          <p class="games-section-desc">How fast can you type? Challenge yourself and improve your typing speed and
+            accuracy.</p>
         </div>
         <div id="whack-a-mole">
           <img class="games-section-img" src="" alt="">
