19Jul25|Tools page|Designed tools page

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -167,34 +167,34 @@
           <div class="blogs-amazon-section">
             <p class="blogs-amazon-subheading">Explore Categories</p>
             <div class="category-cards">
-              <div class="category-card category-gradient eco">
+              <div class="category-card category-gradient color1">
                 <a href="https://www.amazon.com/s?k=eco+friendly" class="category-link">
                   <span>Eco-Friendly</span>
                 </a>
               </div>
-              <div class="category-card category-gradient gadgets">
+              <div class="category-card category-gradient color2">
                 <a href="https://www.amazon.com/s?k=home+gadgets" class="category-link">
                   <span>Home Gadgets</span>
                 </a>
               </div>
-              <div class="category-card category-gradient wellness">
+              <div class="category-card category-gradient color3">
                 <a href="https://www.amazon.com/s?k=wellness" class="category-link">
                   <span>Wellness</span>
                 </a>
               </div>
             </div>
             <div class="category-cards">
-              <div class="category-card category-gradient books">
+              <div class="category-card category-gradient color4">
                 <a href="https://www.amazon.com/s?k=books" class="category-link">
                   <span>Books</span>
                 </a>
               </div>
-              <div class="category-card category-gradient tech">
+              <div class="category-card category-gradient color5">
                 <a href="https://www.amazon.com/s?k=tech+gadgets" class="category-link">
                   <span>Tech Gadgets</span>
                 </a>
               </div>
-              <div class="category-card category-gradient kitchen">
+              <div class="category-card category-gradient color6">
                 <a href="https://www.amazon.com/s?k=kitchen+essentials" class="category-link">
                   <span>Kitchen Essentials</span>
                 </a>
@@ -264,34 +264,34 @@
       <div class="blogs-amazon-section">
             <p class="blogs-amazon-subheading">Explore Categories</p>
             <div class="category-cards">
-              <div class="category-card category-gradient eco">
+              <div class="category-card category-gradient color1">
                 <a href="\blogs\travel\beaches\beaches.html" class="category-link">
                   <span>Beaches</span>
                 </a>
               </div>
-              <div class="category-card category-gradient gadgets">
+              <div class="category-card category-gradient color2">
                 <a href="\blogs\travel\mountains\mountains.html" class="category-link">
                   <span>Mountains</span>
                 </a>
               </div>
-              <div class="category-card category-gradient wellness">
+              <div class="category-card category-gradient color3">
                 <a href="\blogs\travel\wilderness\wilderness.html" class="category-link">
                   <span>Wilderness</span>
                 </a>
               </div>
             </div>
             <div class="category-cards">
-              <div class="category-card category-gradient books">
+              <div class="category-card category-gradient color4">
                 <a href="\blogs\travel\rivers\rivers.html" class="category-link">
                   <span>Rivers</span>
                 </a>
               </div>
-              <div class="category-card category-gradient tech">
+              <div class="category-card category-gradient color5">
                 <a href="\blogs\travel\historic\historic.html" class="category-link">
                   <span>Historic</span>
                 </a>
               </div>
-              <div class="category-card category-gradient kitchen">
+              <div class="category-card category-gradient color6">
                 <a href="\blogs\travel\romantic\romantic.html" class="category-link">
                   <span>Romantic</span>
                 </a>
@@ -358,34 +358,34 @@
       <div class="blogs-amazon-section">
             <p class="blogs-amazon-subheading">Explore Categories</p>
             <div class="category-cards">
-              <div class="category-card category-gradient eco">
+              <div class="category-card category-gradient color1">
                 <a href="\blogs\howto\coding\coding.html" class="category-link">
                   <span>Coding</span>
                 </a>
               </div>
-              <div class="category-card category-gradient gadgets">
+              <div class="category-card category-gradient color2">
                 <a href="\blogs\howto\hardware\hardware.html" class="category-link">
                   <span>Hardware</span>
                 </a>
               </div>
-              <div class="category-card category-gradient wellness">
+              <div class="category-card category-gradient color3">
                 <a href="\blogs\howto\tools\tools.html" class="category-link">
                   <span>Tools</span>
                 </a>
               </div>
             </div>
             <div class="category-cards">
-              <div class="category-card category-gradient books">
+              <div class="category-card category-gradient color4">
                 <a href="\blogs\howto\design\design.html" class="category-link">
                   <span>Design</span>
                 </a>
               </div>
-              <div class="category-card category-gradient tech">
+              <div class="category-card category-gradient color5">
                 <a href="\blogs\howto\cooking\cooking.html" class="category-link">
                   <span>Cooking</span>
                 </a>
               </div>
-              <div class="category-card category-gradient kitchen">
+              <div class="category-card category-gradient color6">
                 <a href="\blogs\howto\everyday\everyday.html" class="category-link">
                   <span>Everyday</span>
                 </a>
